<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_seekbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tV_progression_percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tV_progression_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:typeface="monospace"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/tV_minSpace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minSpace"
            android:typeface="monospace"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/tV_maxSpace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/maxSpace"
            android:typeface="monospace"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sk_seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>